# SantehFast

./: .gitignore  README.md
SantehFast/: db.sqlite3  manage.py  pyproject.toml  requirements.txt
SantehFast/SantehFast/: asgi.py  settings.py  urls.py  wsgi.py
SantehFast/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
SantehFast/accounts/migrations/: 0001_initial.py
SantehFast/accounts/templates/: login_form.html  profile.html  register_form.html
SantehFast/accounts/tests/: test_forms.py  test_models.py  test_validators.py
SantehFast/core/: views.py
SantehFast/core/static/css/: styles.css
SantehFast/core/templates/: base.html  index.html
SantehFast/gallery/: admin.py  models.py  urls.py  views.py
SantehFast/gallery/migrations/: 0001_initial.py  0002_employee_avatar.py  0003_alter_employee_avatar_alter_employee_experience_and_more.py
SantehFast/gallery/templates/: employee_gallery.html  work_gallery.html
SantehFast/orders/: admin.py  forms.py  models.py  urls.py  views.py
SantehFast/orders/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_alter_order_phone.py
SantehFast/orders/templates/: order_form.html
SantehFast/utils/: validators.py
